<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.ibm.cohort</groupId>
	<artifactId>cohort-parent</artifactId>
	<version>${revision}</version>
	
	<packaging>pom</packaging>
	
	<modules>
		<module>cohort-engine</module>
		<module>cdm-modelinfo-tooling</module>
		<module>tests</module>
	</modules>

	<licenses>
		<license>
			<name>The Apache Software License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
		</license>
	</licenses>

	<properties>
		<base-version>0.0.1</base-version>
		<revision>${base-version}-SNAPSHOT</revision>

		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
		
		<cqframework.version>1.5.1-SNAPSHOT</cqframework.version>
		<engine.version>1.5.1-SNAPSHOT</engine.version>
		<ruler.version>0.4.0</ruler.version>

		<jackson.version>2.10.1</jackson.version>
		<jacoco.version>0.8.6</jacoco.version>
	</properties>
	
	<scm>
		<url>https://github.com/Alvearie/quality-measure-and-cohort-service</url>
		<connection>scm:git:git@github.com:Alvearie/quality-measure-and-cohort-service.git</connection>
		<developerConnection>scm:git:git@github.com:Alvearie/quality-measure-and-cohort-service.git</developerConnection>
	</scm>

	<repositories>
		<repository>
			<id>cql.releases</id>
			<name>CQL Framework and Engine Releases</name>
			<url>https://oss.sonatype.org/content/repositories/releases</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>	
		<repository>
			<id>cql.snapshots</id>
			<name>CQL Framework and Engine Snapshots</name>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
			<releases>
				<enabled>false</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>		
	</repositories>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>commons-codec</groupId>
				<artifactId>commons-codec</artifactId>
				<version>1.12</version>
			</dependency>
			<dependency>
				<groupId>commons-io</groupId>
				<artifactId>commons-io</artifactId>
				<version>2.8.0</version>
			</dependency>
			<dependency>
				<groupId>info.cqframework</groupId>
				<artifactId>cql</artifactId>
				<version>${cqframework.version}</version>
			</dependency>
			<dependency>
				<groupId>info.cqframework</groupId>
				<artifactId>model</artifactId>
				<version>${cqframework.version}</version>
			</dependency>
			<dependency>
				<groupId>info.cqframework</groupId>
				<artifactId>elm</artifactId>
				<version>${cqframework.version}</version>
			</dependency>
			<dependency>
				<groupId>info.cqframework</groupId>
				<artifactId>quick</artifactId>
				<version>${cqframework.version}</version>
			</dependency>
			<dependency>
				<groupId>info.cqframework</groupId>
				<artifactId>qdm</artifactId>
				<version>${cqframework.version}</version>
			</dependency>
			<dependency>
				<groupId>info.cqframework</groupId>
				<artifactId>cql-to-elm</artifactId>
				<version>${cqframework.version}</version>
			</dependency>
			<dependency>
				<groupId>org.opencds.cqf.cql</groupId>
				<artifactId>engine</artifactId>
				<version>${engine.version}</version>
			</dependency>
			<dependency>
				<groupId>org.opencds.cqf.cql</groupId>
				<artifactId>engine.fhir</artifactId>
				<version>${engine.version}</version>
			</dependency>
			<dependency>
				<groupId>org.opencds.cqf</groupId>
				<artifactId>common</artifactId>
				<version>${ruler.version}</version>
				<exclusions>
					<exclusion>
						<groupId>ch.qos.logback</groupId>
						<artifactId>logback-classic</artifactId>
					</exclusion>
					<exclusion>
						<groupId>ca.uhn.hapi.fhir</groupId>
						<artifactId>hapi-fhir-jpaserver-base</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>org.opencds.cqf</groupId>
				<artifactId>r4</artifactId>
				<version>${ruler.version}</version>
				<exclusions>
					<exclusion>
						<groupId>ch.qos.logback</groupId>
						<artifactId>logback-classic</artifactId>
					</exclusion>
					<exclusion>
						<groupId>ca.uhn.hapi.fhir</groupId>
						<artifactId>hapi-fhir-jpaserver-base</artifactId>
					</exclusion>					
				</exclusions>
			</dependency>
			<dependency>
				<groupId>org.eclipse.jetty</groupId>
				<artifactId>jetty-servlets</artifactId>
				<version>9.4.30.v20200611</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>flatten-maven-plugin</artifactId>
					<version>1.2.2</version>
					<configuration>
						<updatePomFile>true</updatePomFile>
						<flattenMode>ossrh</flattenMode>
					</configuration>
					<executions>
						<execution>
							<id>flatten</id>
							<phase>process-resources</phase>
							<goals>
								<goal>flatten</goal>
							</goals>
						</execution>
						<execution>
							<id>flatten.clean</id>
							<phase>clean</phase>
							<goals>
								<goal>clean</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
			</plugins>
		</pluginManagement>

		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>flatten-maven-plugin</artifactId>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>release</id>
			<properties>
				<revision>${base-version}</revision>
			</properties>
		</profile>
	</profiles>
</project>

